# Optic-Language

./: .gitignore  CMakeLists.txt  README.md
compiler/: args.cpp  args.hpp  compiler  compiler.cpp  compiler_context.hpp  compiler_instance.cpp  compiler_instance.hpp  diagnostic_engine.cpp  diagnostic_engine.hpp
compiler/lexer/: lexer.cpp  lexer.hpp  tables.hpp  tokens.hpp  tokens_types.def  trie_operators.cpp  trie_operators.hpp
compiler/preprocessor/: preprocessor.cpp  preprocessor.hpp
